[workspace]
members = [
    "programs/*",
    "lib",
]
resolver = "2"

[workspace.package]
name       = "program-deployer"
authors    = ["Timewave Labs"]
edition    = "2021"
license    = "Apache-2.0"
version    = "0.1.0"
repository = "https://github.com/timewave-computer/program_deployer"

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1
panic            = 'abort'
incremental      = false
overflow-checks  = true

[workspace.dependencies]
valence-program-manager = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-program-manager", branch = "art3mix/manager-env-admin" }
deployer-lib            = { path = "lib" }
serde_json              = "1.0.125"
clap                    = { version = "4.5.13", features = ["derive"] }
config                  = { version = "0.15.8", features = ["toml"] }
glob                    = "0.3"
tokio                   = "1.40.0"
chrono                  = "0.4.40"
dotenvy                 = "0.15.7"
cmd_lib                 = "1.3.0"

# Libraries
valence-authorization                = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-authorization", features = ["library"], branch = "art3mix/manager-env-admin" }
valence-base-account                 = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-base-account", features = ["library"], branch = "art3mix/manager-env-admin" }
valence-storage-account              = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-storage-account", features = ["library"], branch = "art3mix/manager-env-admin" }
valence-processor                    = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-processor", features = ["library"], branch = "art3mix/manager-env-admin" }
valence-splitter-library             = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-splitter-library", features = ["library"], branch = "art3mix/manager-env-admin" }
valence-astroport-lper               = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-astroport-lper", features = ["library"], branch = "art3mix/manager-env-admin" }
valence-forwarder-library            = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-forwarder-library", features = ["library"], branch = "art3mix/manager-env-admin" }
valence-astroport-withdrawer         = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-astroport-withdrawer", features = ["library"], branch = "art3mix/manager-env-admin" }
valence-generic-ibc-transfer-library = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-generic-ibc-transfer-library", features = ["library"], branch = "art3mix/manager-env-admin" }
valence-neutron-ibc-transfer-library = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-neutron-ibc-transfer-library", features = ["library"], branch = "art3mix/manager-env-admin" }
valence-reverse-splitter-library     = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-reverse-splitter-library", features = ["library"], branch = "art3mix/manager-env-admin" }
valence-osmosis-gamm-lper            = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-osmosis-gamm-lper", features = ["library"], branch = "art3mix/manager-env-admin" }
valence-osmosis-gamm-withdrawer      = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-osmosis-gamm-withdrawer", features = ["library"], branch = "art3mix/manager-env-admin" }
valence-osmosis-cl-lper              = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-osmosis-cl-lper", features = ["library"], branch = "art3mix/manager-env-admin" }
valence-osmosis-cl-withdrawer        = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-osmosis-cl-withdrawer", features = ["library"], branch = "art3mix/manager-env-admin" }
valence-encoder-broker               = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-encoder-broker", features = ["library"], branch = "art3mix/manager-env-admin" }
valence-neutron-ic-querier           = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-neutron-ic-querier", features = ["library"], branch = "art3mix/manager-env-admin" }
valence-drop-liquid-staker           = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-drop-liquid-staker", features = ["library"], branch = "art3mix/manager-env-admin" }
valence-program-registry             = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-program-registry", features = ["library"], branch = "art3mix/manager-env-admin" }

# utils
valence-account-utils       = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-account-utils", branch = "art3mix/manager-env-admin" }
valence-astroport-utils     = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-astroport-utils", branch = "art3mix/manager-env-admin" }
valence-osmosis-utils       = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-osmosis-utils", branch = "art3mix/manager-env-admin" }
valence-authorization-utils = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-authorization-utils", branch = "art3mix/manager-env-admin" }
valence-ibc-utils           = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-ibc-utils", branch = "art3mix/manager-env-admin" }
valence-macros              = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-macros", branch = "art3mix/manager-env-admin" }
valence-processor-utils     = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-processor-utils", branch = "art3mix/manager-env-admin" }
valence-library-base        = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-library-base", branch = "art3mix/manager-env-admin" }
valence-library-utils       = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-library-utils", branch = "art3mix/manager-env-admin" }
