[package]
name       = "bootstrap-ntrn-dntrn-prod-v1"
authors    = ["Timewave Labs"]
edition    = "2021"
license    = "Apache-2.0"
version    = "0.1.0"
repository = "https://github.com/timewave-computer/timewave-program-deployments"

[dependencies]
deployer-lib            = { workspace = true }
valence-program-manager = { workspace = true }
serde_json              = { workspace = true }
clap                    = { workspace = true }
tokio                   = { workspace = true }

#CW
cosmwasm-std = { workspace = true }
cw-utils     = { workspace = true }
cw-denom     = { workspace = true }

# Libraries
valence-authorization                = { workspace = true }
valence-base-account                 = { workspace = true }
valence-storage-account              = { workspace = true }
valence-processor                    = { workspace = true }
valence-splitter-library             = { workspace = true }
valence-forwarder-library            = { workspace = true }
valence-astroport-lper               = { workspace = true }
valence-astroport-withdrawer         = { workspace = true }
valence-drop-liquid-staker           = { workspace = true }

# utils
valence-account-utils       = { workspace = true }
valence-astroport-utils     = { workspace = true }
valence-authorization-utils = { workspace = true }
valence-processor-utils     = { workspace = true }
valence-library-base        = { workspace = true }
valence-library-utils       = { workspace = true }
